Fix overflow when switching tabs

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll; 
+}
+
 body{
     font-family:'Lato', sans-serif;
     font-size:16px;
